--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,8 @@
 body{
-    max-width: 1080px;
+    max-width: 1440px;
     margin: 0 auto;
     padding: 0;
+    background-color: #242424;
 }
 
 @font-face{ 
@@ -21,25 +22,44 @@ body{
 .text{
     font-family: "Comic Relief";
     font-size: 24px;
+    color: whitesmoke;
 
     margin: 0;
 }
 
 .head_container{
-    height: 50px;
-    justify-content: space-around;
+    display: flex;
+    width: 950px;
+    height: 60px;
+    justify-content: space-between;
+    margin: 0 auto;
+    background-color: rgba(255, 140, 0, 0.541);
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 
 }
 
 .brand_logo{
     display: flex;
-    justify-content: flex-start;
-    padding: 0;
-    margin: 0;
-    
+    align-items: center;
+    padding: 15px 0px;
+    margin: 0 0 0 15px;
 }
 
 .brand_logo > img{
     margin-right: 10px;
     height: 50px;
+}
+.nav__list{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 15px 0;
+    margin: 0 15px 0 0;
+}
+
+.nav__items{
+    color: white;
+    list-style-type: none;
+    font-size: 20px;
 }
