--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,15 +54,26 @@ body{
 .nav__list{
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    padding: 15px 0;
-    margin: 0 15px 0 0;
+    gap: 5px;
+
+    justify-content: center;
+
+    padding-bottom: 10px;
+    margin: 0;
 }
 
 .nav__items{
     color: white;
     list-style-type: none;
-    font-size: 20px;
+    font-size: 15px;
+}
+
+.nav__items::after{
+    content: ' /';
+}
+
+.nav__items:last-child::after{
+    content: ' ';
 }
 
 .tracker-grid{
