I'm building up the interface for testing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,3 +113,9 @@ body{
     display: flex;
     flex-direction: column;
 }
+
+.add-anime-form {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
