--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,9 +23,15 @@ body{
     font-family: "Comic Relief";
     font-size: 24px;
     color: whitesmoke;
-
-    margin: 0;
 }
+
+.text-for-form{
+    font-family: "Comic Relief";
+    font-size: 16px;
+    color: whitesmoke;
+}
+
+
 
 .head_container{
     display: flex;
@@ -158,8 +164,8 @@ body{
 }
 
 .modal-content {
-    width: 500px;
-    height: 150px;
+    width: 525px;
+    height: 230px;
     padding: 50px 14px 0;
     border: 2px solid black;
     background-color: #333;
@@ -177,16 +183,27 @@ body{
 .add-anime-form {
     display: flex;
     flex-direction: column;
+    font-size: 16px;
+}
+
+.add-anime-form-input{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .add-anime-form p{
     color: white;
     padding: 0;
     margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
 }
 
 .add-anime-form input{
-    margin-left: 10px;
+    padding: 0;
     width: 350px;
 }
 
@@ -196,7 +213,7 @@ body{
 
 .close-modal {
     position: absolute;
-    top: 10px;
+    top: 5px;
     right: 5px;
 }
 
@@ -211,3 +228,23 @@ body{
     cursor: pointer;
 }
 
+.toast{
+    display: none;
+
+    margin-top: 15px;
+    min-width: 250px;
+    background-color: #333;
+    border: 1px solid #232323;
+    padding: 16px;
+    
+    text-align: center;
+    color: aliceblue;
+    
+    position: fixed;
+    z-index: 1;
+    /* margin-left: -125px; */
+}
+
+.toast-show{
+    display: flex;
+}
