--- a/client/src/styles/scss/_variables.scss
+++ b/client/src/styles/scss/_variables.scss
@@ -16,6 +16,8 @@ $text-body: oklch(0.5999 0 0);
 $text-in-field: oklch(0.8452 0 0);
 $text-disable: oklch(0.9219 0 0);
 
+$color-border: oklch(1 0 0 / 7%);
+
 $color-placeholder: oklch(0.3211 0 0);
 
 $color-status__completed: oklch(0.4185 0.1184 145);
