--- a/client/src/styles/scss/_mixin.scss
+++ b/client/src/styles/scss/_mixin.scss
@@ -27,3 +27,24 @@
         }
     }
 }
+
+/* @mixin status__watching{
+        position: relative;
+        border: 1px solid $color-status__watching;
+        border-radius: 17px;
+        padding: 1px 7px 1px 28px;
+        background-color: $color-status__watching;
+        @include font('primary', 'body', 'medium', '171');
+        letter-spacing: 0.8px;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 14px;
+            height: 14px;
+            background-color: oklch(0.6255 0.1357 240);
+            border-radius: 50%;
+    }
+} */
