--- a/client/src/sass/_globals.scss
+++ b/client/src/sass/_globals.scss
@@ -7,7 +7,7 @@ body{
     min-height: 100vh;
     padding:0 30px;
     font-family: 'Inter', sans-serif;
-    background-color: $color-gray-1;
+    background-color: #2e2e2e;
 }
 
 input,
