--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -14,6 +14,6 @@ $border-radius: 8px;
 
 $box-shadow: 0 4px 4px -4px rgba(12, 12, 13, 0.05), 0 16px 32px -4px rgba(12, 12, 13, 0.1);
 
-$input-height: 34px;
+$inputSearch: 34px;
 
-$transition-duration: 0.2s
+$transition-duration: 0.2s;
