Done Search Container and Selector Status

--- a/client/src/sass/components/button.scss
+++ b/client/src/sass/components/button.scss
@@ -6,3 +6,9 @@
     border: 1px solid $color-dark-2;
     border-radius: 0 8px 8px 0;
 }
+
+.btn-filter{
+    border: none;
+    outline: none;
+
+}
