--- a/client/src/sass/_globals.scss
+++ b/client/src/sass/_globals.scss
@@ -5,7 +5,7 @@ body{
     justify-content: center;
     align-items: start;
     min-height: 100vh;
-    padding:0 30px;
+    padding:0 ;
     font-family: 'Inter', sans-serif;
     background-color: #2e2e2e;
 }
