--- a/client/src/sass/components/animeTracker.scss
+++ b/client/src/sass/components/animeTracker.scss
@@ -3,61 +3,94 @@
 .animeTracker {
   display: flex;
   align-items: center;
-  flex-direction: column;
-  row-gap: 24px;
+  flex-direction: column;;
   width: 100%;
-  max-width: 1080px;
-  min-width: 1000px;
-  background-color: $color-dark-1;
-  border: $border;
-  border-radius: $border-radius;
+
+  &__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 46px;
+    background: radial-gradient(
+      107.95% 57.49% at 50% 100%,
+      #18253533 0%,
+      #18253585 5%,
+      #182535d9 20%,
+      #182535 60%,
+      #192330 100%
+    );
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  &__search {
+  display: flex;
+  width: 100%;
+  margin: 0 10px;
+  max-width: 445px + 34px;
   box-shadow: $box-shadow;
-}
-
-.animeTracker__header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 46px;
-  background: radial-gradient(
-    107.95% 57.49% at 50% 100%,
-    #18253533 0%,
-    #18253585 5%,
-    #182535d9 20%,
-    #182535 60%,
-    #192330 100%
-  );
-}
-
-.animeTracker__search-container {
-  display: flex;
-}
-
-.animeTracker__search-input {
-  flex: 1;
-  height: $inputSearch;
-  padding: 0;
-  border: 1px solid $color-dark-2;
-  border-radius: 8px 0 0 8px;
-  background-color: #3d4450;
-}
-
-.animeTracker__search-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: $inputSearch;
-  width: $inputSearch;
-  padding: 0;
-  background-color: #182535;
-  border: 1px solid $color-dark-2;
-  border-left: none;
-  border-radius: 0 8px 8px 0;
-  background-image: url(#{btn-icon});
-  background-size: 18px 18px;
-  background-repeat: no-repeat;
-  background-position: center;
+  &-input {
+    height: $inputSearch;
+    width: 100%;
+    max-width: 445px;
+    padding: 0;
+    border: 1px solid $color-dark-2;
+    border-radius: 8px 0 0 8px;
+    border-right: none;
+    background-color: #3d4450;
+    &:hover{
+      background-color: #555f70;
+    }
+    &:active{
+      background-color: #555f70;
+    }
+  }
+  &-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: $inputSearch;
+    width: $inputSearch;
+    padding: 0;
+    background-color: #182535;
+    border: 1px solid $color-dark-2;
+    border-left: none;
+    border-radius: 0 8px 8px 0;
+    &:hover{
+      background-color: #2e4663;
+      .btn_icon{
+        transform: scale(1.2);
+        }
+      }
+    }
+  }
+  &__form {
+    display: flex;
+    column-gap: 16px;
+  }
+  &__field {
+    width: 100%;
+  }
+  &__nav{
+    margin: 10px;
+    &-list{
+      display: flex;
+      gap: 4px
+    }
+    &-items{
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      color: white;
+      padding: 8px 12px;
+      border-radius: 12px;
+      &:hover{
+        background: rgba(255, 255, 255, 0.3);
+      }
+      &:active{
+        background: rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
 }
 
 .btn_icon {
@@ -65,21 +98,4 @@
   background-position: center;
   background-size: 4px 4px;
   color: white;
-}
-
-.animeTracker__title {
-  text-align: center;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 1.2;
-  letter-spacing: -0.02em;
-}
-
-.animeTracker__form {
-  display: flex;
-  column-gap: 16px;
-}
-
-.animeTracker__field {
-  width: 100%;
 }
