--- a/client/src/sass/_globals.scss
+++ b/client/src/sass/_globals.scss
@@ -2,12 +2,16 @@
 
 body{
     display: flex;
-    justify-content: center;
-    align-items: start;
+    flex-direction: column;
+    align-items: center;
     min-height: 100vh;
     padding:0 ;
     font-family: 'Inter', sans-serif;
-    background-color: #2e2e2e;
+    background: radial-gradient(
+    100% 100% at 50% 100%,
+    #182140 5%,
+    #132030 70%,
+    );
 }
 
 input,
