--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -9,7 +9,35 @@ $color-gray-2: #d9d9d9;
 $color-gray-3: #d3d3d3;
 $color-gray-4: #757575;
 
-$border: 1px solid $color-white;
+$steam-bg-dark: #0F1117;
+$steam-bg: #101724;
+$steam-panel: #1A1F2B;
+$steam-panel-light: #232B3B;
+
+$steam-blue: #1B95D1;
+$steam-blue-bright: #20A4DE;
+$steam-cyan: #13C1C8;
+$steam-cyan-bright: #29E8E8;
+
+$steam-purple: #5B5FF0;
+$steam-purple-light: #7A7CFF;
+
+$steam-text-soft: #E5EAF0;
+$steam-text-muted: #A6B3C5;
+$steam-text-disabled: #6E7A8C;
+
+$steam-border: #1C2633;
+$steam-border-light: #243344;
+
+$font-size-xs: 12px;   
+$font-size-sm: 13px;
+$font-size-md: 15px;
+$font-size-lg: 18px;
+$font-size-xl: 22px;
+$font-size-xxl: 26px;  
+
+
+$border: 1px solid $steam-border;
 $border-radius: 8px;
 
 $box-shadow: 0 4px 4px -4px rgba(12, 12, 13, 0.05), 0 16px 32px -4px rgba(12, 12, 13, 0.1);
