--- a/client/src/sass/components/animeTracker.scss
+++ b/client/src/sass/components/animeTracker.scss
@@ -99,20 +99,29 @@
 }
 .row{
   display: grid;
-  grid-template-columns: 30px 800px 100px;
-  grid-template-rows: 30px;
+  grid-template-columns: 30px 800px repeat(2, 100px);
+  grid-template-rows: 45px;
   gap: 1px;
-  border: 1px solid $color-gray-4;
 
   text-align: center;
   align-items: center;
-  &:first-child{
+
+  &:hover{
+    background-color: rgba(255,255,255,0.15);
+    &:first-child{
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-  }
-  &:last-child{
+    }    
+    &:last-child{
       border-bottom-left-radius: 12px;
       border-bottom-right-radius: 12px;
+    }
+  }
+  &:first-child{
+    border-bottom: 2px solid black ;
+  }
+  &:last-child{
+
   }
   &_header{
     font-size: $font-size-lg;
