--- a/client/src/sass/components/animeTracker.scss
+++ b/client/src/sass/components/animeTracker.scss
@@ -2,7 +2,7 @@
 
 .header{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 46px;
@@ -12,6 +12,23 @@
   border-bottom-left-radius: 15px;
   box-shadow: $box-shadow;
   margin-bottom: 10px;
+  &-nav{
+    display: flex;
+    color: $steam-text-soft;
+    &__list{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 10px;
+      font-size: $font-size-xl;
+      letter-spacing: 1.2px;
+    }
+    &__items:hover{
+      display: flex;
+      color: $steam-blue;
+      transition-duration: $transition-duration;
+    }
+  }
   &__search{
     display: flex;
     width: 100%;
@@ -36,22 +53,34 @@
         background-color: rgba(255,255,255,0.2);
       }
     }
-    &-btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  }    
+  &-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $steam-text-soft;
+    padding: 0;
+    border: $border;
+    border-left: 1px solid $color-dark-2;
+    border-radius: 0 8px 8px 0;
+    
+    &--search{
       height: $inputSearch;
       width: $inputSearch;
-      padding: 0;
       background-color: rgba(255,255,255,0.15);
-      border: $border;
-      border-left: 1px solid $color-dark-2;
-      border-radius: 0 8px 8px 0;
-      &:hover{
-        background-color: $steam-blue;
-        .btn_icon{
-          transform: scale(1.2);
-        }
+    }
+    &--add{
+      height: $inputSearch;
+      width: 170px;
+      background-color: rgba(255,255,255,0.15);
+      border-radius: 8px;
+
+    }
+
+    &:hover{
+      background-color: $steam-blue;
+      .btn_icon{
+        transform: scale(1.2);
       }
     }
   }
@@ -92,11 +121,24 @@
     background-color: $steam-panel-light;
     border: $border;
     border-radius: 12px;
+    margin-bottom: 12px;
   }
 
   &-table__header{
     display: contents;
-  }  
+  }
+  &-modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
+    background-color: rgba(255,255,255,0.15);
+    border: $border;
+    border-radius: 12px;
+    color: $steam-text-soft;
+    letter-spacing: 0.5px;
+  }
 }
 .row{
   display: grid;
@@ -188,4 +230,8 @@
   background-position: center;
   background-size: 4px 4px;
   color: white;
+}
+
+.modal{
+  color: $steam-text-soft;
 }
