Moved btn and field into separate files

--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -2,6 +2,8 @@
 @use '_fonts';
 @use '_variables';
 @use '_globals';
+@use '_utils';
 
 @use '/src/sass/components/animeTracker';
 @use '/src/sass/components/button';
+@use '/src/sass/components/field';
